--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ https://www.tooplate.com/view/2115-marvel
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/project-image04.png" class="img-fluid" alt="project image">
+                            <img src="images/Project 4.png" class="img-fluid" alt="project image">
                           </div>
                         </div>
 
