--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/tooplate-style.css">
     
   </head>
-  <body>
+  <body style="background-color: #151515;">
     <nav class="navbar navbar-expand-sm navbar-light">
         <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -26,31 +26,22 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav " left-margin="0">
+                <ul class="navbar-nav " style="margin-left:0; margin-top:20px;">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link"><span data-hover="Home">Home</span></a>
+                        <a href="index.html" class="nav-link"><span data-hover="Home" style="color: #eee;">Home</span></a>
                     </li>
                     <li class="nav-item">
-                      <a href="#about" class="nav-link"><span data-hover="About">About</span></a>
+                      <a href="#about" class="nav-link"><span data-hover="About" style="color: #eee;">About</span></a>
                   </li>
                     <li class="nav-item">
-                        <a href="#project" class="nav-link"><span data-hover="Projects">Projects</span></a>
+                        <a href="#project" class="nav-link"><span data-hover="Projects" style="color: #eee;">Projects</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#resume" class="nav-link"><span data-hover="Resume">Resume</span></a>
+                        <a href="#resume" class="nav-link"><span data-hover="Resume" style="color: #eee;">Resume</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contact" class="nav-link"><span data-hover="Contact">Contact</span></a>
+                        <a href="#contact" class="nav-link"><span data-hover="Contact" style="color: #eee;">Contact</span></a>
                     </li>
-                </ul>
-
-                <ul class="navbar-nav ml-lg-auto">
-                    <div class="ml-lg-4">
-                      <div class="color-mode d-lg-flex justify-content-center align-items-center">
-                        <i class="color-mode-icon"></i>
-                        Mode
-                      </div>
-                    </div>
                 </ul>
             </div>
         </div>
@@ -64,7 +55,7 @@
                     <div class="about-text">
                         <small class="small-text">Welcome to <span class="mobile-block">my portfolio website!</span></small>
                         <h1 class="animated animated-text">
-                            <span class="mr-2">Hey, I'm </span>
+                            <span class="mr-2" style="color: #eee;">Hey, I'm </span>
                                 <div class="animated-info">
                                     <span class="animated-item">Ubai</span>
                                     <span class="animated-item">Data Analyst</span>
@@ -87,6 +78,19 @@
                       <span class="animated-item"><img src=".\images\picture\IMG_5234-removebg-preview.png" class="img-fluid" ></span>
                     </div>
                 </div>
+
+            </div>
+            <div class=" soft-skill mt-4" style="display:flex; list-style-type: none;">
+              <li><span class="soft mr-lg-2" style="display: block;         background-color:#474559; color: #eee;font-weight: bold; width:150px; border-radius: 50px; padding: 13px 29px;font-size: 14px;overflow: hidden;transition: all 0.4s ease;"> Soft Skill </span></li>
+              <li><span class="soft mr-lg-2" style="display: inline-block;  background-color:#eee; color: #5b5b5b;font-weight: bold; width:150px; border-radius: 50px; padding: 13px 29px;font-size: 14px;overflow: hidden;transition: all 0.4s ease; border: 2px solid #000;"> Leadership </span></li>
+              <li><span class="soft mr-lg-2" style="display: block;         background-color:#eee; color: #5b5b5b;font-weight: bold; width:150px; border-radius: 50px; padding: 13px 29px;font-size: 14px;overflow: hidden;transition: all 0.4s ease; border: 2px solid #000;"> Teamwork </span></li>
+              <li><span class="soft mr-lg-2" style="display: inline-block;  background-color:#eee; color: #5b5b5b;font-weight: bold; border-radius: 50px; padding: 13px 29px;font-size: 14px;overflow: hidden;transition: all 0.4s ease; border: 2px solid #000;"> Public Speaking </span></li>
+              <li><span class="soft mr-lg-2" style="display: inline-block;  background-color:#eee; color: #5b5b5b;font-weight: bold; border-radius: 50px; padding: 13px 29px;font-size: 14px;overflow: hidden;transition: all 0.4s ease; border: 2px solid #000;"> Critical Thinking </span></li>
+              <li><span class="soft mr-lg-2" style="display: inline-block;  background-color:#eee; color: #5b5b5b;font-weight: bold; border-radius: 50px; padding: 13px 29px;font-size: 14px;overflow: hidden;transition: all 0.4s ease; border: 2px solid #000;"> Problem Solving </span></li>
+            </div>
+            <div class="soft-skill " style="display:flex; list-style-type: none; margin-left:155px">
+              <li><span class="soft mr-lg-2" style="display: block;         background-color:#eee; color: #5b5b5b;font-weight: bold; border-radius: 50px; padding: 13px 29px;font-size: 14px;overflow: hidden;transition: all 0.4s ease; border: 2px solid #000;"> Adaptability </span></li>
+              <li><span class="soft mr-lg-2" style="display: inline-block;  background-color:#eee; color: #5b5b5b;font-weight: bold;  border-radius: 50px; padding: 13px 29px;font-size: 14px;overflow: hidden;transition: all 0.4s ease; border: 2px solid #000;"> Time management </span></li>
 
             </div>
         </div>
