--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
 
             </div>
-            <div class=" soft-skill mt-4" style="display:flex; list-style-type: none;">
+            <div class=" col-md-12 col-12" style="display:flex; list-style-type: none;">
               <li><span class="soft mr-lg-2" style="display: block;         background-color:#474559; color: #eee;font-weight: bold; width:150px; border-radius: 50px; padding: 13px 29px;font-size: 14px;overflow: hidden;transition: all 0.4s ease;"> Soft Skill </span></li>
               <li><span class="soft mr-lg-2" style="display: inline-block;  background-color:#eee; color: #5b5b5b;font-weight: bold; width:150px; border-radius: 50px; padding: 13px 29px;font-size: 14px;overflow: hidden;transition: all 0.4s ease; border: 2px solid #000;"> Leadership </span></li>
               <li><span class="soft mr-lg-2" style="display: block;         background-color:#eee; color: #5b5b5b;font-weight: bold; width:150px; border-radius: 50px; padding: 13px 29px;font-size: 14px;overflow: hidden;transition: all 0.4s ease; border: 2px solid #000;"> Teamwork </span></li>
