--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
             <div class="soft-skill " style="display:flex; list-style-type: none; margin-left:155px">
               <li><span class="soft mr-lg-2" style="display: block;         background-color:#eee; color: #5b5b5b;font-weight: bold; border-radius: 50px; padding: 13px 29px;font-size: 14px;overflow: hidden;transition: all 0.4s ease; border: 2px solid #000;"> Adaptability </span></li>
               <li><span class="soft mr-lg-2" style="display: inline-block;  background-color:#eee; color: #5b5b5b;font-weight: bold;  border-radius: 50px; padding: 13px 29px;font-size: 14px;overflow: hidden;transition: all 0.4s ease; border: 2px solid #000;"> Time management </span></li> -->
-
-            </div>
+<!-- 
+            </div> -->
         </div>
     </section>
 
