--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/tooplate-style.css">
     
   </head>
-  <body style="background-color: #151515;">
+  <body>
     <nav class="navbar navbar-expand-sm navbar-light">
         <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -26,22 +26,31 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav " style="margin-left:0; margin-top:20px;">
+                <ul class="navbar-nav " left-margin="0" >
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link"><span data-hover="Home" style="color: #eee;">Home</span></a>
+                        <a href="index.html" class="nav-link"><span data-hover="Home" >Home</span></a>
                     </li>
                     <li class="nav-item">
-                      <a href="#about" class="nav-link"><span data-hover="About" style="color: #eee;">About</span></a>
+                      <a href="#about" class="nav-link"><span data-hover="About">About</span></a>
                   </li>
                     <li class="nav-item">
-                        <a href="#project" class="nav-link"><span data-hover="Projects" style="color: #eee;">Projects</span></a>
+                        <a href="#project" class="nav-link"><span data-hover="Projects">Projects</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#resume" class="nav-link"><span data-hover="Resume" style="color: #eee;">Resume</span></a>
+                        <a href="#resume" class="nav-link"><span data-hover="Resume">Resume</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contact" class="nav-link"><span data-hover="Contact" style="color: #eee;">Contact</span></a>
+                        <a href="#contact" class="nav-link"><span data-hover="Contact">Contact</span></a>
                     </li>
+                </ul>
+
+                <ul class="navbar-nav ml-lg-auto">
+                    <div class="ml-lg-4">
+                      <div class="color-mode d-lg-flex justify-content-center align-items-center">
+                        <i class="color-mode-icon"></i>
+                        Mode
+                      </div>
+                    </div>
                 </ul>
             </div>
         </div>
@@ -55,7 +64,7 @@
                     <div class="about-text">
                         <small class="small-text">Welcome to <span class="mobile-block">my portfolio website!</span></small>
                         <h1 class="animated animated-text">
-                            <span class="mr-2" style="color: #eee;">Hey, I'm </span>
+                            <span class="mr-2">Hey, I'm </span>
                                 <div class="animated-info">
                                     <span class="animated-item">Ubai</span>
                                     <span class="animated-item">Data Analyst</span>
@@ -245,7 +254,7 @@
                 <div class="row" style="display: flex;">
                   <ul class="Sosmed" style="justify-content: space-between; align-items: center; width: 100px; margin:50%">
                       <li>
-                          <a href="https://www.linkedin.com/in/ahmad-ubai-dullah-4a8a22265/"><img src="images/linkedin.png" alt="Linkedin" style="width: 40px; height: 40px; border-radius: 50%; "></a>
+                          <a href="https://www.linkedin.com/in/ahmad-ubai-dullah-4a8a22265/"><img src="images/linkedin.png" alt="Linkedin" style="width: 40px; height: 40px; border-radius: 50%; ">
                       </li>
                       <li>
                         <a href="https://github.com/ubaidlah773"><img src="images/github.png" alt="Github" href="" style="width: 40px; height: 40px; border-radius: 50%; "></a>
