--- a/index.html
+++ b/index.html
@@ -105,25 +105,25 @@
                       <div class="owl-carousel owl-theme">
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/Project 1.png" class="img-fluid" alt="project image">
+                            <a href="https://lookerstudio.google.com/reporting/40ec8491-2458-47a0-a85e-7d0a305d8067"><img src="images/project/Project 1.png" class="img-fluid" alt="project image"></a>
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/Project 2.png" class="img-fluid" alt="project image">
+                          <a href=""><img src="images/project/Project 2.png" class="img-fluid" alt="project image"></a> 
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/Project 3.png" class="img-fluid" alt="project image">
+                          <a href="https://github.com/devHardXD/Money-Manager"><img src="images/project/Project 3.png" class="img-fluid" alt="project image"></a>
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/Project 4.png" class="img-fluid" alt="project image">
+                          <a href=""><img src="images/project/Project 4.png" class="img-fluid" alt="project image"></a>
                           </div>
                         </div>
                   </div>
